# IQA_fc

./: README.md  iqa_jobs.db  pyproject.toml  requirements.txt
.hypothesis/constants/: 0070d6fa3bb01f4a  22276bd9c41498c7  3934276ee958ffba  3b74b229415d3f6b  50086fd45a1acc51  6771ea74e2680793  6f8813cb3531e281  7f173cefd9f79385  8dc9871d55998192  a8d1ca237bea31ae  cba31880836b5661  d8a1834f8d1bcb5c  ecf8fa22960b73db  f0eb926b201fd584  ff3ad34cf315f11f
adapters/: __init__.py  dynamodb_db.py  local_queue.py  local_storage.py  s3_storage.py  sqlite_db.py  sqs_queue.py
api/: main.py
core/: __init__.py  domain.py  exceptions.py  job_service.py  ports.py  scoring_engine.py  webhook_client.py
tests/: __init__.py  test_api.py  test_e2e.py  test_job_service.py  test_local_queue.py  test_local_storage.py  test_ml_worker.py  test_scoring_engine.py  test_sqlite_db.py  test_webhook_client.py
worker/: main.py  ml_worker.py
